# atlantico-avanti-fullstack-bootcamp

./: .gitignore  .gitmodules  LICENSE  README.MD
Module 02 - Databases & Git/: init.sql  queries.sql  values.sql
Module 02 - Databases & Git/challenge-01/: README.MD  init.sql  queries.sql
Module 03 - Back-end Development and Git Github introduction/challenge-02/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
Module 03 - Back-end Development and Git Github introduction/challenge-02-flexing/: Cargo.toml  README.md
Module 03 - Back-end Development and Git Github introduction/challenge-02-flexing/src/: main.rs  migration.sql
Module 03 - Back-end Development and Git Github introduction/challenge-02-flexing/src/controllers/: category_controller.rs  event_controller.rs  mod.rs  place_controller.rs
Module 03 - Back-end Development and Git Github introduction/challenge-02-flexing/src/database/: mod.rs
Module 03 - Back-end Development and Git Github introduction/challenge-02-flexing/src/error/: app_error.rs
Module 03 - Back-end Development and Git Github introduction/challenge-02-flexing/src/models/: app_data.rs  category.rs  event.rs  filters.rs  mod.rs  place.rs  status.rs
Module 03 - Back-end Development and Git Github introduction/challenge-02-flexing/src/repositories/: category_repository.rs  event_repository.rs  mod.rs  place_repository.rs
Module 03 - Back-end Development and Git Github introduction/challenge-02-flexing/src/routes/: category_route.rs  event_router.rs  mod.rs  place_routes.rs
(+20 files in other folders)
